# covShrinkage

./: README.md  main.py  paper.ipynb  pyproject.toml  requirements.txt  utils.py  well-cond.ipynb
.github/actions/setup-python-env/: action.yml
.github/workflows/: mypy.yml  pytest.yml
docs/: search.js  tests.html
docs/_pdoc_theme/: index.jinja2
docs/tests/: unit_test.html  utils.html
src/covShrinkage/: GIS.py  LIS.py  QIS.py  base.py  corr.py  cov1Para.py  cov2Para.py  covCor.py  covDiag.py  covMarket.py  diag.py  index.py  linear.py  market.py
tests/: test_corr.py  test_diag.py  test_identity.py  test_linear.py  test_market.py  test_sklearn_integration.py  test_twoParam.py  unit_test.py  utils.py
tests/data/: 2par_shrink_16_50.txt  2par_shrink_200_4.txt  2par_shrink_50_16.txt  X_16_50.txt  X_200_4.txt  X_50_16.txt  corr_shrink_16_50.txt  corr_shrink_200_4.txt  corr_shrink_50_16.txt  diag_shrink_16_50.txt  diag_shrink_200_4.txt  diag_shrink_50_16.txt  id_shrink_16_50.txt  id_shrink_200_4.txt  id_shrink_50_16.txt  market_shrink_16_50.txt  market_shrink_200_4.txt  market_shrink_50_16.txt
